--- a/src/app/styles/form.contact.module.css
+++ b/src/app/styles/form.contact.module.css
@@ -92,5 +92,13 @@ width: 100%; height: 100%;}
     padding: 2rem;
   }
 }
+@media (max-width: 900px) {
+.contactContainer {
+    width: 100%;
+  }
+}
 
 
+.css-1nmdiq5-menu{
+  background-color: #3F3B41!important;
+}
